--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background: #191815;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -12,10 +13,12 @@ body {
 
 h1 {
   text-align: center;
+  color: #dcd8c0;
 }
 
 h2 {
   padding-top: 1rem;
+  color: white;
 }
 
 #welcome {
@@ -28,7 +31,7 @@ h2 {
   border-radius: 10px;
   padding: 1rem;
   margin-right: 1rem;
-  color: black;
+  color: white;
   text-decoration: none;
 }
 .grid-container {
@@ -38,16 +41,19 @@ h2 {
   max-width: 1300px;
   width: 100%;
   margin: auto;
+  color: black;
   padding: 2rem;
 }
 
 article {
+  background: #696458;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   border-radius: 0.5em;
   overflow: hidden;
+  color: #191815;
   box-shadow: rgba(99, 99, 99, 0.5) 0px 2px 8px 0px;
   padding-bottom: 1rem;
 }
@@ -64,6 +70,8 @@ article img {
   max-width: 1300px;
   width: 100%;
   margin: auto;
+  color: white;
+  background: #696458;
   justify-content: center;
   display: flex;
 }
